adding content-text img css

--- a/source/_includes/mods/mod-full-col-text.html
+++ b/source/_includes/mods/mod-full-col-text.html
@@ -4,7 +4,7 @@
     </td>
 </tr>
 <tr>
-  <td align="center" class="mWidth ucsc-text spacing-top spacing-bottom spacing-left spacing-right">
+  <td align="center" class="mWidth spacing-top spacing-bottom spacing-left spacing-right content-text">
     <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
   </td>
 </tr>
