--- a/source/_includes/mods/mod-three-columns.html
+++ b/source/_includes/mods/mod-three-columns.html
@@ -22,7 +22,7 @@
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth ucsc-text xlarge-spacing-right align-left">
+        <td align="left" class="mWidth xlarge-spacing-right align-left content-text">
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
       </tr>
@@ -43,7 +43,7 @@
           </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth ucsc-text xlarge-spacing-right align-left">
+        <td align="left" class="mWidth xlarge-spacing-right align-left content-text">
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
       </tr>
@@ -64,7 +64,7 @@
           </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth ucsc-text xlarge-spacing-right align-left">
+        <td align="left" class="mWidth xlarge-spacing-right align-left content-text">
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
       </tr>
