--- a/source/_includes/mods/mod-two-columns-org.html
+++ b/source/_includes/mods/mod-two-columns-org.html
@@ -19,7 +19,7 @@
          </td>
        </tr>
       <tr>
-         <td class="mWidth left-column text">
+         <td class="mWidth left-column content-text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
@@ -39,7 +39,7 @@
          </td>
        </tr>
       <tr>
-         <td class="mWidth left-column text">
+         <td class="mWidth left-column content-text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
@@ -50,7 +50,7 @@
               <td width="120" valign="top" class="mWidth">
                 <img src="http://placehold.it/120x120" width="120" height="120" alt="Placeholder image" class="mFullImage">
               </td>
-              <td class="spacing-left" width="230" class="mWidth">
+              <td class="spacing-left" width="230" class="mWidth content-text">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
@@ -65,7 +65,7 @@
               <td width="120" valign="top" class="mWidth">
                 <img src="http://placehold.it/120x120" width="120" height="120" alt="Placeholder image" class="mFullImage">
               </td>
-              <td class="spacing-left" width="230" class="mWidth">
+              <td class="spacing-left" width="230" class="mWidth content-text">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
@@ -74,7 +74,7 @@
          </td>
        </tr>
        <tr style="page-break-before: always">
-         <td class="mWidth spacing-top border-top left-column">
+         <td class="mWidth spacing-top border-top left-column content-text">
            <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
          </td>
