--- a/source/_includes/mods/mod-two-columns-vertical.html
+++ b/source/_includes/mods/mod-two-columns-vertical.html
@@ -15,7 +15,7 @@
         <td class="spacing-right spacing-bottom" valign="top">
           <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image">
         </td>
-        <td align="left" valign="top" class="large-spacing-right align-left">
+        <td align="left" valign="top" class="large-spacing-right align-left content-text">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. </p>
         </td>
@@ -30,7 +30,7 @@
         <td class="spacing-right spacing-bottom" valign="top">
           <img src="http://placehold.it/95x140" align="left" width="95" height="140" alt="Placeholder image">
         </td>
-        <td align="left" valign="top align-left">
+        <td align="left" valign="top align-left content-text">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
         </td>
