--- a/source/_includes/mods/mod-two-columns.html
+++ b/source/_includes/mods/mod-two-columns.html
@@ -24,7 +24,7 @@
          </td>
        </tr>
       <tr>
-         <td align="left" class="mWidth left-column align-left text">
+         <td align="left" class="mWidth left-column align-left content-text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
@@ -44,7 +44,7 @@
          </td>
        </tr>
       <tr>
-         <td align="left" class="mWidth left-column align-left text">
+         <td align="left" class="mWidth left-column align-left content-text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
@@ -68,7 +68,7 @@
            <![endif]-->
            <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="230">
             <tr>
-              <td align="left" class="spacing-left align-left" width="230" >
+              <td align="left" class="spacing-left align-left content-text" width="230" >
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
@@ -101,7 +101,7 @@
            <![endif]-->
            <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="230">
             <tr>
-              <td align="left" class="spacing-left align-left" width="230" >
+              <td align="left" class="spacing-left align-left content-text" width="230" >
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
