--- a/source/_includes/mods/mod-30-70.html
+++ b/source/_includes/mods/mod-30-70.html
@@ -24,7 +24,7 @@
          </td>
        </tr>
        <tr>
-         <td class="mWidth align-left text">
+         <td class="mWidth align-left content-text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
          </td>
        </tr>
@@ -49,7 +49,7 @@
          </td>
        </tr>
        <tr>
-         <td class="mWidth align-left text">
+         <td class="mWidth align-left content-text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
