--- a/source/_includes/mods/mod-50-50.html
+++ b/source/_includes/mods/mod-50-50.html
@@ -20,7 +20,7 @@
       </td>
     </tr>
     <tr>
-      <td class="mWidth uscc-text spacing-top align-left">
+      <td class="mWidth uscc-text spacing-top align-left content-text">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
       </td>
     </tr>
