--- a/source/_includes/mods/mod-full-width-center.html
+++ b/source/_includes/mods/mod-full-width-center.html
@@ -15,7 +15,7 @@
   </td>
 </tr>
  <tr>
-  <td align="center" class="mWidth ucsc-text section-content text">
+  <td align="center" class="mWidth section-content content-text">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
   </td>
 </tr>
