--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -45,8 +45,10 @@ h4 {
 p,
 span,
 div {
-	font-size: 16px;;
+	line-height: 22px;
+	padding: 0 0 16px;
 }
+
 
 .uppercase {
 	text-transform: uppercase;
