--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -59,6 +59,11 @@ a:hover {
 	padding-top: 10px;
 }
 
+.spacing-bottom-top {
+	padding-bottom: 10px;
+	padding-top: 5px;
+}
+
 .large-spacing-top {
 	padding-bottom: 5px;
 	padding-top: 20px;
