--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -42,9 +42,14 @@ h4 {
 	font-size: $font-h6;
 }
 
+p .p1 {
+	text-align: inherit;
+}
+
 p,
 span,
 div {
+	display: block;
 	line-height: 22px;
 	padding: 0 0 16px;
 }
