--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -78,6 +78,11 @@ a:hover {
 	padding-bottom: 15px;
 }
 
+.large-spacing-bottom {
+	padding-bottom: 20px;
+}
+
+
 .spacing-left {
 	padding-left: 10px
 }
