--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -22,6 +22,10 @@ table {
 	margin: 0 auto;
 }
 
+td {
+	line-height: 22px;
+}
+
 .block {
 	display: block !important;
 }
@@ -79,7 +83,7 @@ a:hover {
 }
 
 .large-spacing-bottom {
-	padding-bottom: 20px;
+	padding-bottom: 35px;
 }
 
 
