spacing top content

--- a/source/_includes/mods/mod-three-columns.html
+++ b/source/_includes/mods/mod-three-columns.html
@@ -4,7 +4,7 @@
   </td>
 </tr>
 <tr>
-  <td align="left" class="mWidth section-content spacing-top-only align-left" valign="top">
+  <td align="left" class="mWidth section-content spacing-top-content align-left" valign="top">
   <!--[if (gte mso 9)|(IE)]>
       <table width="610" align="center">
       <tr>
