--- a/source/_includes/mods/mod-features.html
+++ b/source/_includes/mods/mod-features.html
@@ -1,10 +1,10 @@
 <tr>
-  <td align="left" class="mWidth section-title align-left">
+  <td align="left" class="mWidth section-title align-left spacing-top-content">
     <h2>ALSO FEATURED</h2>
   </td>
 </tr>
 <tr>
-  <td class="section-content spacing-content-only">
+  <td class="section-content">
   <!-- LEFT COLUMN -->
    <table align="left" border="0" cellpadding="0" cellspacing="0" width="295" class="mWidth">
      <tbody>
