spacing-top-content

--- a/source/_includes/mods/mod-full-width.html
+++ b/source/_includes/mods/mod-full-width.html
@@ -4,7 +4,7 @@
   </td>
 </tr>
 <tr>
-  <td class="mWidth section-content">
+  <td class="mWidth section-content spacing-top-content">
   <img src="http://placehold.it/610x250" width="610" height="250" alt="Placeholder image" class="mFullImage">
   </td>
 </tr>
