--- a/source/_includes/mods/mod-50-50.html
+++ b/source/_includes/mods/mod-50-50.html
@@ -4,7 +4,7 @@
   </td>
 </tr>
 <tr>
-  <td class="mWidth section-content spacing-content-only">
+  <td class="mWidth section-content spacing-top-content">
   <table align="left" border="0" cellspacing="0" cellpadding="0" width="250" class="mWidth">
     <tr>
       <td class="mWidth">
