--- a/source/_includes/mods/mod-features.html
+++ b/source/_includes/mods/mod-features.html
@@ -4,7 +4,7 @@
   </td>
 </tr>
 <tr>
-  <td class="section-content">
+  <td class="section-content spacing-top-content">
   <!-- LEFT COLUMN -->
    <table align="left" border="0" cellpadding="0" cellspacing="0" width="295" class="mWidth">
      <tbody>
