--- a/source/_includes/mods/mod-footer-socials.html
+++ b/source/_includes/mods/mod-footer-socials.html
@@ -1,5 +1,5 @@
 <tr>
-  <td align="center" class="spacing-top spacing-bottom">
+  <td align="center" class="spacing-footer spacing-bottom">
       <table cellpadding="0" cellspacing="0" width="300">
       <tr>
         <td align="center" colspan="5" class="footer-title">
